--- a/style.css
+++ b/style.css
@@ -1,7 +1,33 @@
+:root {
+    --White: hsl(0, 0%, 100%);
+    --light-grey: hsl(217, 12%, 63%);
+    --medium-grey: hsl(216, 12%, 54%);
+    --dark-blue: hsl(213, 19%, 18%);
+    --very-dark-blue: hsl(216, 12%, 8%);
+
+}
+
 *,
 *::before,
 *::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    font-family: "Overpass", sans-serif;
+    background-color: var(--very-dark-blue);
+}
+
+button {
+    font-family: "Overpass", sans-serif;
+}
+
+.confirmation-container {
+    display: none;
 }
