--- a/style.css
+++ b/style.css
@@ -33,8 +33,30 @@ button {
 .content-container {
     background-color: var(--dark-blue);
     width: 87.5%;
-    max-width: 20.5rem;
+    max-width: 25rem;
     padding: 1.5rem;
+}
+
+.icon-container {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.icon-border {
+    background-color: hsl(213, 20%, 24%);
+    padding: .75rem;
+    display: flex;
+    justify-content: center;
+    border-radius: 50%;
+}
+
+.icon {
+    width: .9rem;
+}
+
+.content-title {
+    padding: 1rem 0;
 }
 
 .confirmation-container {
